1/1.08/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-svc
spec:
  type: ClusterIP
  selector:
    app: myapp1
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
